--- a/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
+++ b/client/src/app/shared/components/dashboard-card/dashboard-card.component.scss
@@ -25,8 +25,7 @@ h4 {
 }
 
 .value {
-  font-size: 28px;
-  letter-spacing: 2.5px;
+  font-size: 24px;
   font-weight: bold;
 }
 
@@ -35,6 +34,7 @@ h4 {
   display: flex;
   align-items: center;
   gap: 0.75rem;
+  transform: translateY(2px);
 
   .trend-info {
     display: flex;
