Show duration difference in popup + add doc for dashbaord

--- a/client/src/app/features/training-logs/calendar-dashboard-popup/calendar-dashboard-popup.component.html
+++ b/client/src/app/features/training-logs/calendar-dashboard-popup/calendar-dashboard-popup.component.html
@@ -1,25 +1,24 @@
 @if (loadingComplete()) {
-  <div class="grid-container">
+  <div class="flex-container">
     <app-dashboard-card
       [icon]="IconName.BAR_CHART"
       [iconBackgroundColor]="IconBackgroundColor.DodgerBlue"
       [unit]="tonnage()"
       [differenceFromLastSession]="tonangeDifferenceFromlastWeek()"
-      [title]="'Tonnage (in kg)'"
+      [title]="'Tonnage (in KG)'"
     />
-
     <app-dashboard-card
       [icon]="IconName.CLOCK"
       [iconBackgroundColor]="IconBackgroundColor.DarkGray"
-      [unit]="55"
-      [differenceFromLastSession]="-5"
+      [unit]="duration()"
+      [differenceFromLastSession]="durationDifferenceFromLastWeek()"
       [title]="'Dauer (Minuten)'"
     />
   </div>
 
-  <app-grouped-bar-chart [data]="mockChartData()!" [yAxisTitle]="'Tonnage (KG)'" />
+  <app-grouped-bar-chart [data]="volumeComparisonChartData()!" [yAxisTitle]="'Tonnage (KG)'" />
 
-  <app-grouped-bar-chart [data]="mockChartData()!" [yAxisTitle]="'Est. Max (KG)'" />
+  <app-grouped-bar-chart [data]="performanceComparisonChartData()!" [yAxisTitle]="'Est. Max (KG)'" />
 } @else {
-  ...Loading
+  <app-chart-skeleton />
 }
