--- a/client/src/app/features/training-logs/calendar-dashboard-popup/calendar-dashboard-popup.component.scss
+++ b/client/src/app/features/training-logs/calendar-dashboard-popup/calendar-dashboard-popup.component.scss
@@ -5,8 +5,7 @@
   padding-block: 0.5rem;
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.flex-container {
+  display: flex;
   gap: 2.25rem;
 }
