--- a/client/src/app/features/training-logs/calendar-event/calendar-event.component.html
+++ b/client/src/app/features/training-logs/calendar-event/calendar-event.component.html
@@ -1,7 +1,7 @@
 @if (isTrainingLog()) {
   <app-icon [name]="IconName.CHECK_CIRCLE" [color]="'#32CD32'" />
 } @else {
-  <app-icon [name]="IconName.Zap" [fillIcon]="true" [color]="'#FFA500'" />
+  <app-icon [name]="IconName.Activity" [fillIcon]="true" [color]="'#a78bfa'" />
 }
 
 {{ trainingDayCalendarEntry().label }}
