--- a/client/src/app/features/best-performance/best-performance.component.html
+++ b/client/src/app/features/best-performance/best-performance.component.html
@@ -1,5 +1,5 @@
 @if (isInitialized()) {
-  {{ userBestPerformanceMap.get('Squat') | json }}
+  {{ userBestPerformanceMap | mapProperty: 'Squat' | json }}
 } @else {
   <app-chart-skeleton />
 }
