Derive best performance charts from exercise data

--- a/client/src/app/features/best-performance/best-performance.component.html
+++ b/client/src/app/features/best-performance/best-performance.component.html
@@ -1,5 +1,18 @@
 @if (isInitialized()) {
-  {{ userBestPerformanceMap | mapProperty: 'Squat' | json }}
+  @if (squatPerformance() && squatPerformanceDashboardCardInfo()) {
+    <app-dashboard-card
+      [title]="squatPerformanceDashboardCardInfo()!.title"
+      [icon]="IconName.BAR_CHART"
+      [unit]="squatPerformanceDashboardCardInfo()!.unit"
+      [differenceFromLastSession]="squatPerformanceDashboardCardInfo()!.prIncrement"
+    />
+  }
+
+  @if (benchPerformance() && benchPerformanceDashboardCardInfo()) {}
+
+  @if (deadliftPerformance() && deadliftPerformanceDashboardCardInfo()) {}
+
+  @if (overheadpressPerformance() && overheadpressPerformanceDashboardCardInfo()) {}
 } @else {
   <app-chart-skeleton />
 }
