--- a/client/src/app/features/training-plans/training-day-selection/training-day-selection.component.scss
+++ b/client/src/app/features/training-plans/training-day-selection/training-day-selection.component.scss
@@ -1,30 +1,25 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  gap: 0.35rem;
-}
-
-.week-day-grid {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  border: 1px solid #e0e0e0;
-  border-radius: 5px;
-  gap: 0;
-}
-
-.day {
-  padding-block: 0.75rem;
-  border-right: 1px solid #e0e0e0;
-  color: grey;
   display: grid;
   place-items: center;
-  transition: color 0.3s ease;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 0;
 
-  &:last-of-type {
-    border: none;
-  }
+  .day {
+    border: 1px solid rgb(179, 179, 179);
+    border-radius: 50%;
+    width: 2.55em;
+    aspect-ratio: 1;
+    display: grid;
+    place-items: center;
+    transition:
+      background-color 0.2s ease,
+      color 0.2s ease,
+      border-color 0.2s ease;
 
-  &.selected {
-    color: #0073ff;
+    &.selected {
+      color: white;
+      background-color: var(--accent-color);
+      border-color: var(--accent-color);
+    }
   }
 }
