Add ugly logic for deleting resources via modal

--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
@@ -1,5 +1,5 @@
-{{ deletionText() }}
+{{ infoText() }}
 
 <p>Please type "{{ deletionKeyWord() }}" to confirm deletion.</p>
 
-<input type="text" [(ngModel)]="deletionKeyWordUserInput()" placeholder="Enter confirmation keyword" />
+<input type="text" [(ngModel)]="deletionKeyWordUserInput" placeholder="Enter confirmation keyword" />
