Improve user feedback for invalid deletion value

--- a/client/src/app/shared/components/button/button.component.scss
+++ b/client/src/app/shared/components/button/button.component.scss
@@ -29,7 +29,7 @@
   background-color: #cfe7ff;
 }
 .btn-destructive {
-  background-color: #e63946;
+  background-color: var(--error-color);
   color: #fff;
 }
 
