--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -9,6 +9,7 @@
   --light-grey: #f0f0f0;
   --dark-grey: #2e3a40;
   --border-color: #e2e8f0;
+  --error-color: #e63946;
   --element-background: rgb(247, 247, 247);
 
   --off-white: #fdfdfd;
