--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
@@ -29,7 +29,7 @@
   transition: all 0.3s ease;
 
   &:focus {
-    border-color: #3498db;
+    border-color: #999999;
     box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
   }
 }
@@ -41,5 +41,11 @@
 .valid-input {
   border: 2px solid #27ae60 !important;
   background-color: #eafaf1;
+  color: #2c3e50;
+}
+
+.invalid-input {
+  border: 2px solid var(--error-color) !important;
+  background-color: #fdecea;
   color: #2c3e50;
 }
