--- a/client/src/app/shared/components/floating-label-input/floating-label-input.component.html
+++ b/client/src/app/shared/components/floating-label-input/floating-label-input.component.html
@@ -6,7 +6,7 @@
         [class.is-invalid]="isInvalid()"
         id="floatingInput"
         (input)="onInputChange($event)"
-        [value]="value()"
+        [(value)]="value"
       />
     }
     @case ('select') {
