Allow navigation to next modal tab via button

--- a/client/src/app/shared/components/modal/modal.component.html
+++ b/client/src/app/shared/components/modal/modal.component.html
@@ -24,9 +24,10 @@
           }
 
           @let buttonVariant = isDestructiveAction ? 'DESTRUCTIVE' : 'PRIMARY';
+          @let buttonText = tabs().length > 0 && activeTabIndex() < tabs().length - 1 ? 'Weiter' : confirmButtonText;
           <app-button
             [variant]="buttonVariant"
-            [textContent]="confirmButtonText"
+            [textContent]="buttonText"
             (clicked)="confirm()"
             [isLoading]="isLoading()"
           />
