--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -12,7 +12,12 @@
 
   @for (dayNumber of dayNumbers(); track dayNumber) {
     <div class="day" (click)="toggleTrainingDayByNumber(dayNumber)">
-      <div class="day-number" [ngClass]="{ 'selected-day': trainingDays().has(days()[dayNumber - 1]) }">
+      <div
+        class="day-number"
+        [ngClass]="{
+          'selected-day': trainingPlanEditView.trainingDays().has(days()[dayNumber - 1]),
+        }"
+      >
         {{ dayNumber }}
       </div>
     </div>
