--- a/client/src/app/shared/components/modal/modal.component.scss
+++ b/client/src/app/shared/components/modal/modal.component.scss
@@ -4,6 +4,10 @@
   background-color: transparent !important;
 }
 
+.modal-tab-body {
+  height: 30rem;
+}
+
 .modal-header {
   display: flex;
   justify-content: space-between;
