Add start date and date picker for training plan creation in ui

--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -1,6 +1,6 @@
 <app-alert
   [alertText]="
-    'Die ausgewählten Trainingstage bestimmen deine Trainingsfrequenz und werden automatisch in deinen Trainingskalender eingetragen. So behältst du immer den Überblick!'
+    'Die ausgewählten Trainingstage bestimmen deine Trainingsfrequenz und werden automatisch in deinen Trainingskalender eingetragen.'
   "
   [alertType]="'light'"
 />
@@ -23,3 +23,5 @@
     </div>
   }
 </div>
+
+<app-date-picker [(selectedDate)]="trainingPlanEditView.startDate" />
