--- a/client/src/app/shared/components/modal/modal-pagination/modal-pagination.component.html
+++ b/client/src/app/shared/components/modal/modal-pagination/modal-pagination.component.html
@@ -1,9 +1,9 @@
 @for (tab of modalTabs(); track tab.label; let index = $index) {
-  <div (click)="switchTab(tab)" [ngClass]="{ active: tab === activeTab() }">
+  <div (click)="switchTab(tab)" class="tab" [ngClass]="{ active: tab === activeTab() }">
     {{ tab.label }}
   </div>
 
   @if (index < modalTabs().length - 1) {
-    <app-icon [name]="IconName.ARROW_RIGHT" />
+    <app-icon [name]="IconName.ARROW_RIGHT" [size]="14" />
   }
 }
