Simplified api for modal service and use provider map instead of providers

--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.html
@@ -1,6 +1,6 @@
 <img
   [src]="trainingPlan().coverImageBase64 || '/images/training/training_3.jpg'"
-  class="card-custom-img"
+  class="card-banner"
   [alt]="'banner'"
 />
 <div class="profile-picture">
