--- a/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.scss
+++ b/client/src/app/features/training-plans/training-plan-card/training-plan-card.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  border-radius: 8px;
+  border-radius: 0.75;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   transition: transform 0.3s ease;
@@ -36,7 +36,7 @@
   font-size: 0.9em;
 }
 
-.card-custom-img {
+.card-banner {
   height: 175px;
   min-height: 175px;
   background-repeat: no-repeat;
@@ -48,18 +48,18 @@
 
 .card-body,
 .card-footer {
-  padding: 2.35rem 1rem;
+  padding: 2.125rem 1rem;
 }
 
 .profile-picture img {
   border-radius: 50%;
-  border: 5px solid rgb(248, 249, 250);
+  border: 3px solid rgb(248, 249, 250);
   box-shadow: 0 0 15px rgba(10, 10, 10, 0.3);
   position: absolute;
-  top: 147.5px;
+  top: 152.5px;
   left: 10px;
-  width: 55px;
-  height: 55px;
+  width: 45px;
+  height: 45px;
 }
 
 .card-footer {
