--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -17,7 +17,7 @@
             [label]="item.label"
             [iconName]="item.iconName"
             [iconBackgroundColor]="item.iconBackgroundColor"
-            (itemClicked)="onListItemClicked($any($event))"
+            [onItemClicked]="item.onItemClicked"
           />
         }
       </div>
