Delete alert component and adjust code

--- a/client/src/app/features/auth/login-modal/login-modal.component.html
+++ b/client/src/app/features/auth/login-modal/login-modal.component.html
@@ -1,5 +1,5 @@
-<app-alert
-  [alertText]="
+<app-info
+  [infoText]="
     'The Google sign-in popup is temporarily unavailable due to a cooldown. Please use the button below to sign in manually.'
   "
 />
