--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   @if (!isLoading()) {
-    @if (trainingPlanService.trainingPlans().length === 0) {
-      <app-alert
-        [alertText]="
-          'Du hast noch keine Trainingspläne erstellt! Starte jetzt, indem du entweder eine individuelle Session für gezieltes Training erstellst, oder einen umfassenden Trainingsplan, der dir hilft, deine langfristigen Ziele zu erreichen.'
-        "
-        [alertType]="'light'"
-      />
-    }
     <div class="training-plan-grid">
+      @if (trainingPlanService.trainingPlans().length === 0) {
+        <app-info
+          [infoText]="
+            'Du hast noch keine Trainingspläne erstellt! Starte jetzt, indem du entweder eine individuelle Session für gezieltes Training erstellst, oder einen umfassenden Trainingsplan, der dir hilft, deine langfristigen Ziele zu erreichen.'
+          "
+        />
+      }
+
       @for (trainingPlan of trainingPlanService.trainingPlans(); track trainingPlan.id) {
         <div class="training-plan-card-container">
           <app-training-plan-card [trainingPlan]="trainingPlan" />
