--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -1,8 +1,7 @@
-<app-alert
-  [alertText]="
+<app-info
+  [infoText]="
     'Die ausgewählten Trainingstage bestimmen deine Trainingsfrequenz und werden automatisch in deinen Trainingskalender eingetragen.'
   "
-  [alertType]="'light'"
 />
 
 <div class="calendar-grid">
