--- a/client/src/app/features/training-plans/training-view/auto-progression/auto-progression.component.html
+++ b/client/src/app/features/training-plans/training-view/auto-progression/auto-progression.component.html
@@ -1,7 +1,5 @@
-<app-alert
-  class="mb-3"
-  alertType="primary"
-  alertText="Stelle sicher, dass du deinen Trainingsplan bereits vollständig erstellt und gespeichert hast."
+<app-info
+  [infoText]="'Stelle sicher, dass du deinen Trainingsplan bereits vollständig erstellt und gespeichert hast.'"
 />
 
 <div class="input-group">
