--- a/client/src/app/shared/components/no-statistics-available/no-statistics-available.component.html
+++ b/client/src/app/shared/components/no-statistics-available/no-statistics-available.component.html
@@ -1,4 +1,4 @@
-<app-alert [alertText]="infoText()" [alertType]="'light'" />
+<app-info [infoText]="infoText()" />
 
 <app-icon-list-item
   [label]="'Keine Daten vorhanden'"
