--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
@@ -1,4 +1,4 @@
-<app-alert [alertText]="infoText()" [alertType]="'light'" />
+<app-info [infoText]="infoText()" />
 
 <div class="form-group">
   <label for="deletion-input">Bitte gebe "{{ deletionKeyWord() }}" ein um den Inhalt zu löschen.</label>
