Make info component more beatiful

--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
@@ -6,6 +6,7 @@
   <input
     id="deletion-input"
     type="text"
+    autocomplete="off"
     [(ngModel)]="deletionKeyWordUserInput"
     [ngClass]="deletionKeyWordUserInput() | validationClass: deletionKeyWord()"
     placeholder="Enter confirmation keyword"
