--- a/client/src/app/shared/components/info/info.component.scss
+++ b/client/src/app/shared/components/info/info.component.scss
@@ -1,9 +1,16 @@
 :host {
-  border: 1px solid #e0e0e0;
+  display: flex;
+  gap: 1rem;
+  border: 1px solid #d0e7f9;
   border-radius: 8px;
-  padding: 16px;
-  font-size: 16px;
+  padding: 0.75rem;
   line-height: 1.5;
-  color: #333;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  color: #214a77;
+  background-color: #f3f9ff;
+}
+
+app-icon {
+  color: rgb(31, 154, 211);
+  flex-shrink: 0;
 }
