--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
@@ -1,11 +1,10 @@
 :host {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 1rem;
 }
 
 .form-group {
-  padding: 0.5em 0.725em;
   display: flex;
   flex-direction: column;
   gap: 0.5em;
@@ -13,8 +12,8 @@
 
   app-icon {
     position: absolute;
-    right: 1.65rem;
-    bottom: 1.3rem;
+    right: 1rem;
+    bottom: 0.85rem;
     color: #27ae60;
   }
 }
@@ -29,7 +28,7 @@
   transition: all 0.3s ease;
 
   &:focus {
-    border-color: #999999;
+    border-color: #b7b7b7;
     box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
   }
 }
