--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.html
@@ -1,8 +1,6 @@
-<app-info [infoText]="infoText()" />
+<app-info [infoText]="deleteMessage()" />
 
 <div class="form-group">
-  <label for="deletion-input">Bitte gebe "{{ deletionKeyWord() }}" ein um den Inhalt zu löschen.</label>
-
   <input
     id="deletion-input"
     type="text"
