--- a/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
+++ b/client/src/app/shared/components/modal/delete-confirmation/delete-confirmation.component.scss
@@ -28,7 +28,7 @@
   transition: all 0.3s ease;
 
   &:focus {
-    border-color: #b7b7b7;
+    border-color: #999999;
     box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
   }
 }
@@ -47,4 +47,8 @@
   border: 2px solid var(--error-color) !important;
   background-color: #fdecea;
   color: #2c3e50;
+
+  app-icon {
+    color: var(--error-color);
+  }
 }
