--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,6 +5,8 @@
 
 :root {
   --accent-color: #a78bfa;
+  --accent-button-color: #825bdf;
+  --accent-button-color-active: #7046d0;
 
   --light-grey: #f0f0f0;
   --dark-grey: #2e3a40;
