--- a/client/src/app/shared/components/info/info.component.scss
+++ b/client/src/app/shared/components/info/info.component.scss
@@ -1,16 +1,10 @@
 :host {
-  display: flex;
   gap: 1rem;
-  border: 1px solid #d0e7f9;
+  border: 1px solid #e3dbf5;
   border-radius: 8px;
   padding: 0.75rem;
   line-height: 1.5;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  color: #214a77;
-  background-color: #f3f9ff;
-}
-
-app-icon {
-  color: rgb(31, 154, 211);
-  flex-shrink: 0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+  color: #4b3d60;
+  background-color: #f7f5fc;
 }
