--- a/client/src/app/features/training-logs/training-log-calendar/training-calendar.component.html
+++ b/client/src/app/features/training-logs/training-log-calendar/training-calendar.component.html
@@ -1,5 +1,5 @@
 @if (trainingDayCalendarData$ | async; as trainingDayCalendarData) {
-  <div class="calendar-grid">
+  <div class="calendar-grid" appSwipe (swipeLeft)="navigateToPreviousMonth()" (swipeRight)="navigateToNextMonth()">
     <div class="day-name">Mo</div>
     <div class="day-name">Di</div>
     <div class="day-name">Mi</div>
