--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -1,31 +1,54 @@
 :host {
-  display: flex;
-  flex-direction: column;
-}
+  position: relative;
+  width: 100%;
+  color: darkgray;
 
-label {
-  font-size: 14px;
-  color: #333;
-  margin-bottom: 4px;
-}
+  input {
+    width: 100%;
+    padding: 10px 12px;
+    padding-left: 1.05rem;
+    font-size: 16px;
+    border: 2px solid #ddd;
+    color: rgb(66, 66, 66);
+    border-radius: 4px;
+    transition:
+      border-color 0.2s,
+      box-shadow 0.2s;
 
-input {
-  padding: 8px;
-  font-size: 14px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+    &:focus {
+      border-color: #6200ea;
+      outline: none;
+    }
 
-  &:focus {
-    border-color: #007bff;
+    &.invalid {
+      border-color: #e53935;
+    }
   }
 
-  &.invalid {
-    border-color: #e74c3c;
-  }
-}
+  .floating-label {
+    font-size: 0.9em;
+    color: #9e9e9e;
+    pointer-events: none;
+    transition:
+      transform 0.2s,
+      color 0.2s,
+      font-size 0.2s;
+    background: white;
+    padding: 0 7.5px;
+    transform: translate(7px, 10px);
+    transition:
+      transform 0.2s ease,
+      color 0.2s linear,
+      font-size 0.2s ease-in-out;
 
-.error-message {
-  margin-top: 4px;
-  font-size: 12px;
-  color: #e74c3c;
+    &.active {
+      color: #6200ea;
+    }
+  }
+
+  .error-message {
+    font-size: 12px;
+    color: #e53935;
+    margin-top: 4px;
+  }
 }
