Fix form association and validation messages

--- a/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
+++ b/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
@@ -1,5 +1,10 @@
 <app-training-banner [(imageSrc)]="trainingPlanEditView.coverImageBase64" />
 
-<app-form-input [label]="'Titel'" [(value)]="trainingPlanEditView.title" />
+<app-form-input
+  [label]="'Titel'"
+  [(value)]="trainingPlanEditView.title"
+  [validationPattern]="'^(?!\s*$).+'"
+  [validationErrorMessage]="'Titel ist erforderlich'"
+/>
 
 <app-form-input [label]="'Blocklänge (Wochen)'" [(value)]="trainingPlanEditView.trainingBlockLength" />
