--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -21,7 +21,8 @@
     }
 
     &.invalid {
-      border-color: #e53935;
+      border-color: var(--error-color);
+      background-color: #fdecea;
     }
   }
 
@@ -38,17 +39,22 @@
     transform: translate(7px, 10px);
     transition:
       transform 0.2s ease,
-      color 0.2s linear,
-      font-size 0.2s ease-in-out;
+      color 0.2s linear;
 
     &.active {
       color: #6200ea;
     }
+
+    &.invalid {
+      color: var(--error-color);
+      background: #fef3f2;
+    }
   }
 
   .error-message {
-    font-size: 12px;
-    color: #e53935;
+    font-size: 14px;
+    padding-left: 0.75rem;
+    color: var(--error-color);
     margin-top: 4px;
   }
 }
