Focus title input in creation mode and handle touched state more gracefully

--- a/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
+++ b/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
@@ -5,6 +5,7 @@
   [(value)]="trainingPlanEditView.title"
   [required]="true"
   [validationPattern]="'^(?!\s*$).+'"
+  [focus]="trainingPlanEditView.isCreationMode()"
   [validationErrorMessage]="'Titel ist erforderlich'"
 />
 
