--- a/client/src/app/shared/components/modal/modal.component.html
+++ b/client/src/app/shared/components/modal/modal.component.html
@@ -1,5 +1,10 @@
 <div class="modal fade show" style="display: block" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-dialog-centered" appDraggable [ngClass]="size" role="document">
+  <div
+    class="modal-dialog modal-dialog-centered{{ !mobileDeviceDetectionService.isMobileDevice ? '-top' : '' }}"
+    appDraggable
+    [ngClass]="size"
+    role="document"
+  >
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
