Do not use profile picture in header and add keylisteners for modal tabs

--- a/client/src/app/features/header/header.component.html
+++ b/client/src/app/features/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="button-container">
     @for (button of headerService.buttons(); track button.icon) {
       @if (button.icon === IconName.MORE_VERTICAL) {
-        <app-profile-picture [profilePicture]="profileService.pictureUrl()!" [options]="button.options!" />
+        <app-more-options-button [options]="button.options!" />
       } @else {
         <app-circular-icon-button [icon]="button.icon!" [iconSize]="20" (click)="onCircularButtonClick(button)" />
       }
