--- a/client/src/app/shared/components/form-input/form-input.component.html
+++ b/client/src/app/shared/components/form-input/form-input.component.html
@@ -12,6 +12,7 @@
   [(ngModel)]="value"
   [class.invalid]="!isValid()"
   [required]="required()"
+  [spellcheck]="false"
 />
 
 @if (!isValid() && isTouched() && validationErrorMessage()) {
