Display cached amount of skeleton cards

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -17,7 +17,7 @@
     </div>
   } @else {
     <div class="training-plan-grid">
-      @for (k of [1, 2, 3]; track k) {
+      @for (skeleton of skeletonCardCount(); track skeleton) {
         <app-skeleton-card />
       }
     </div>
